# agentguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: agentguard-scan.yml
agentguard/: __init__.py
agentguard/cli/: main.py
agentguard/scanner/: __init__.py  core.py
docs/: deployment-architecture.md  free-deployment-plan.md  language-choice-analysis.md
examples/: secure_config.yaml  vulnerable_config.yaml
scripts/: monitor-agentguard.sh
